--- a/Web-Proje-1/Home.html
+++ b/Web-Proje-1/Home.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="Home.css">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="div-nav">
-        <nav class="nav">
-            <ul class="ul">
+    <div class="Main">
+        <div class="navbar">
+            
+            <ul>
+                <h1 class="h1-ul">Name</h1>
                 <li>
-                    <a href="">About</a>
+                    <a href="">reess</a>
                 </li>
                 <li>
-                    <a href="">Test</a>
+                    <a href="">twsss</a>
                 </li>
                 <li>
-                    <a href="">Test2</a>
-                </li>
-                <li>
-                    <a href="Login.html">Login</a>
+                    <a href="">Foods</a>
                 </li>
                 <li>
                     <a href="">Home</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </div>
-    <div class="cont">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem illo ipsum possimus laudantium aliquid facilis similique repudiandae quasi rerum libero earum quidem, ipsa debitis, eum illum enim. Reprehenderit ducimus laboriosam id odit laborum quos modi! Dolor unde eos totam ducimus nulla rerum labore accusamus fuga veritatis nesciunt laborum hic pariatur, sit dolorem modi asperiores culpa ullam iusto adipisci possimus illum maiores! Consequuntur velit, libero suscipit sed quasi nihil ad expedita eveniet dolor placeat, culpa neque. Necessitatibus explicabo commodi deleniti eius quas aperiam tenetur consequuntur officia aliquid, voluptas aut minus quidem assumenda consectetur modi non recusandae tempora, amet rem ducimus autem.</p>
+    <div class="cont-food">
+        test
     </div>
 </body>
 </html>
