--- a/Web-Proje-1/Login.html
+++ b/Web-Proje-1/Login.html
@@ -4,26 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="Login.css"">
+  <link rel="stylesheet" href="Login.css">
 </head>
 <body>
-  <div class="conto">
-    <div class="loginform">
-      
-      <div class="login-form-right">
-        <h1>
-          Sign in
-        </h1>
-        <form action="">
-          <label for="input-m">Enter Username</label>
-          <input type="mail" id="input-m">
-          <label for="input-p">Enter Password</label>
-          <input type="password" id="input-p">
-          <button class="logbtn">Login</button>
-        </form>
+  <div class="L-Form">
+    <form action="">
+      <div class="l-Head">
+        <h1>Login</h1>
       </div>
-    </div>
+    </form>
+
   </div>
-  
 </body>
 </html>
